Refactored way that app checks if game has been won

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "backbone": "~1.1.2",
     "backbone.localStorage": "~1.1.13",
     "socket.io": "~1.0.6",
-    "socket.io-client": "~1.0.6"
+    "socket.io-client": "~1.0.6",
+    "lodash": "~2.4.1"
   },
   "resolutions": {
     "backbone": "~1.1.2"
